fix(mobile-client): access to user menu settings is not visible if you have multiple tile groups in the header

--- a/artifacts/Application/planet9_launchpad_standard_qa/compiledCss.css
+++ b/artifacts/Application/planet9_launchpad_standard_qa/compiledCss.css
@@ -1103,6 +1103,11 @@ html[dir=rtl] .nepTreeItemAction .sapMSTIIcon {
     border-radius: 0;
     margin: auto;
   }
+  #topContainerRight {
+    z-index: 1000;
+    right: 0;
+    position: absolute;
+  }
 }
 .nepLaunchpadOverflowContainer {
   position: absolute;
@@ -1770,8 +1775,16 @@ html.sap-desktop.nepThemeDark ::-webkit-scrollbar-thumb:hover {
 }
 
 .nepThemeDark .nepTopMenu {
+  background: --white;
+}
+
+.nepThemeDark .nepTopMenu {
   background: var(--darkThemePrimaryBackground);
   border-radius: 0;
+}
+
+.nepThemeDark .nepTopMenu #topContainerRight {
+  background: --darkThemePrimaryBackground;
 }
 
 .nepThemeLight .nepNavBarContent {
